MMA-8276 Fiks litt forslag frå IntelliJ